install_debug.txt
2026-01-14 10:21:18,980 43160 WARNING ? tcrm.tools.config: option db_password reads 'false' in the config file at c:\d\crm\tcrm.conf but isn't a boolean option, skip 
2026-01-14 10:21:18,981 43160 WARNING ? tcrm.tools.config: missing --http-interface/http_interface, using 0.0.0.0 by default, will change to 127.0.0.1 in 20.0 
2026-01-14 10:21:18,982 43160 INFO ? tcrm: tcrm version 19.0 
2026-01-14 10:21:18,982 43160 INFO ? tcrm: Using configuration file at c:\d\crm\tcrm.conf 
2026-01-14 10:21:18,982 43160 INFO ? tcrm: addons paths: ['C:\\D\\crm\\tcrm-src\\tcrm\\addons', 'C:\\Users\\Net Mimar\\AppData\\Local\\TCRM\\tcrm\\addons\\19.0', 'c:\\d\\crm\\tcrm-src\\tcrm\\addons', 'c:\\d\\crm\\tcrm-src\\addons', 'c:\\d\\crm\\custom_addons'] 
2026-01-14 10:21:18,982 43160 INFO ? tcrm: database: odoo@default:5433 
2026-01-14 10:21:19,430 43160 INFO test_saas tcrm.modules.loading: Initializing database test_saas 
2026-01-14 10:21:19,430 43160 ERROR test_saas tcrm.sql_db: bad query: b'\xef\xbb\xbf-------------------------------------------------------------------------\n-- Pure SQL\n-------------------------------------------------------------------------\n\nCREATE TABLE ir_actions (\n  id serial,\n  primary key(id)\n);\nCREATE TABLE ir_act_window (primary key(id)) INHERITS (ir_actions);\nCREATE TABLE ir_act_report_xml (primary key(id)) INHERITS (ir_actions);\nCREATE TABLE ir_act_url (primary key(id)) INHERITS (ir_actions);\nCREATE TABLE ir_act_server (primary key(id)) INHERITS (ir_actions);\nCREATE TABLE ir_act_client (primary key(id)) INHERITS (ir_actions);\n\nCREATE TABLE res_users (\n    id serial NOT NULL,\n    -- No FK references below, will be added later by ORM\n    -- (when the destination rows exist)\n    company_id integer, -- references res_company,\n    partner_id integer, -- references res_partner,\n    active boolean default True,\n    create_date timestamp without time zone,\n    login varchar(64) NOT NULL UNIQUE,\n    password varchar default null,\n    primary key(id)\n);\n\nCREATE TABLE res_groups (\n    id serial NOT NULL,\n    name jsonb NOT NULL,\n    primary key(id)\n);\n\nCREATE TABLE ir_module_category (\n    id serial NOT NULL,\n    create_uid integer, -- references res_users on delete set null,\n    create_date timestamp without time zone,\n    write_date timestamp without time zone,\n    write_uid integer, -- references res_users on delete set null,\n    parent_id integer REFERENCES ir_module_category ON DELETE SET NULL,\n    name jsonb NOT NULL,\n    primary key(id)\n);\n\nCREATE TABLE ir_module_module (\n    id serial NOT NULL,\n    create_uid integer, -- references res_users on delete set null,\n    create_date timestamp without time zone,\n    write_date timestamp without time zone,\n    write_uid integer, -- references res_users on delete set null,\n    website character varying,\n    summary jsonb,\n    name character varying NOT NULL,\n    author character varying,\n    icon varchar,\n    state character varying(16),\n    latest_version character varying,\n    shortdesc jsonb,\n    category_id integer REFERENCES ir_module_category ON DELETE SET NULL,\n    description jsonb,\n    application boolean default False,\n    demo boolean default False,\n    web boolean DEFAULT FALSE,\n    license character varying(32),\n    sequence integer DEFAULT 100,\n    auto_install boolean default False,\n    to_buy boolean default False,\n    primary key(id)\n);\n\nCREATE TABLE ir_module_module_dependency (\n    id serial NOT NULL,\n    name character varying,\n    module_id integer REFERENCES ir_module_module ON DELETE cascade,\n    auto_install_required boolean DEFAULT true,\n    primary key(id)\n);\n\nCREATE TABLE ir_model_data (\n    id serial NOT NULL,\n    create_uid integer,\n    create_date timestamp without time zone DEFAULT (now() at time zone \'UTC\'),\n    write_date timestamp without time zone DEFAULT (now() at time zone \'UTC\'),\n    write_uid integer,\n    res_id integer,\n    noupdate boolean DEFAULT False,\n    name varchar NOT NULL,\n    module varchar NOT NULL,\n    model varchar NOT NULL,\n    primary key(id)\n);\n\nCREATE TABLE res_currency (\n    id serial,\n    name varchar NOT NULL,\n    symbol varchar NOT NULL,\n    primary key(id)\n);\n\nCREATE TABLE res_company (\n    id serial,\n    name varchar NOT NULL,\n    partner_id integer,\n    currency_id integer,\n    sequence integer,\n    create_date timestamp without time zone,\n    primary key(id)\n);\n\nCREATE TABLE res_partner (\n    id serial,\n    company_id integer,\n    create_date timestamp without time zone,\n    name varchar,\n    primary key(id)\n);\n\n\n---------------------------------\n-- Default data\n---------------------------------\ninsert into res_currency (id, name, symbol) VALUES (1, \'USD\', \'$\');\ninsert into ir_model_data (name, module, model, noupdate, res_id) VALUES (\'USD\', \'base\', \'res.currency\', true, 1);\nselect setval(\'res_currency_id_seq\', 1);\n\ninsert into res_company (id, name, partner_id, currency_id, create_date) VALUES (1, \'My Company\', 1, 1, now() at time zone \'UTC\');\ninsert into ir_model_data (name, module, model, noupdate, res_id) VALUES (\'main_company\', \'base\', \'res.company\', true, 1);\nselect setval(\'res_company_id_seq\', 1);\n\ninsert into res_partner (id, name, company_id, create_date) VALUES (1, \'My Company\', 1, now() at time zone \'UTC\');\ninsert into ir_model_data (name, module, model, noupdate, res_id) VALUES (\'main_partner\', \'base\', \'res.partner\', true, 1);\nselect setval(\'res_partner_id_seq\', 1);\n\ninsert into res_users (id, login, password, active, partner_id, company_id, create_date) VALUES (1, \'__system__\', NULL, false, 1, 1, now() at time zone \'UTC\');\ninsert into ir_model_data (name, module, model, noupdate, res_id) VALUES (\'user_root\', \'base\', \'res.users\', true, 1);\nselect setval(\'res_users_id_seq\', 1);\n\ninsert into res_groups (id, name) VALUES (1, \'{"en_US": "Employee"}\');\ninsert into ir_model_data (name, module, model, noupdate, res_id) VALUES (\'group_user\', \'base\', \'res.groups\', true, 1);\nselect setval(\'res_groups_id_seq\', 1);\n'
ERROR: syntax error at or near "\ufeff"
LINE 1: \ufeff-----------------------------------------------------------...
        ^
 
2026-01-14 10:21:19,432 43160 INFO test_saas tcrm.modules.loading: skipping reset_modules_state, ir_module_module table does not exists 
2026-01-14 10:21:19,432 43160 ERROR test_saas tcrm.registry: Failed to load registry 
2026-01-14 10:21:19,432 43160 CRITICAL test_saas tcrm.service.server: Failed to initialize database `test_saas`. 
Traceback (most recent call last):
  File "C:\D\crm\tcrm-src\tcrm\service\server.py", line 1510, in preload_registries
    registry = Registry.new(dbname, update_module=update_module, install_modules=config['init'], upgrade_modules=config['update'], reinit_modules=config['reinit'])
  File "C:\D\crm\tcrm-src\tcrm\tools\func.py", line 88, in locked
    return func(inst, *args, **kwargs)
  File "C:\D\crm\tcrm-src\tcrm\orm\registry.py", line 199, in new
    load_modules(
  File "C:\D\crm\tcrm-src\tcrm\modules\loading.py", line 368, in load_modules
    modules_db.initialize(cr)
  File "C:\D\crm\tcrm-src\tcrm\modules\db.py", line 45, in initialize
    cr.execute(base_sql_file.read())  # pylint: disable=sql-injection
  File "C:\D\crm\tcrm-src\tcrm\sql_db.py", line 433, in execute
    self._obj.execute(query, params)
psycopg2.errors.SyntaxError: syntax error at or near "\ufeff"
LINE 1: \ufeff-----------------------------------------------------------...
        ^

2026-01-14 10:21:19,441 43160 INFO test_saas tcrm.service.server: Initiating shutdown 
2026-01-14 10:21:19,441 43160 INFO test_saas tcrm.service.server: Hit CTRL-C again or send a second signal to force the shutdown. 
2026-01-14 10:21:19,441 43160 INFO test_saas tcrm.sql_db: ConnectionPool(read/write;used=0/count=0/max=64): Closed 1 connections  
